Improved understandability of # np.loadtxt?
;)

--- a/201_numerik_mit_numpy.ipynb
+++ b/201_numerik_mit_numpy.ipynb
@@ -1119,8 +1119,8 @@
     "> ```python\n",
     "> date, T = np.loadtxt('data/temperatures.txt', unpack=True)\n",
     "> ```\n",
-    ">\n",
-    "> Weitere praktische Optionen, wie die ersten Zeilen zu überspringen u.ä., findet ihr in der Dokumentation. Entfernt das '`#`'-Zeichen in der folgenden Zelle und schaut euch die Optionen mal an:"
+    "\n",
+    "Weitere praktische Optionen, wie die ersten Zeilen zu überspringen u.ä., findet ihr in der Dokumentation. Entfernt das '`#`'-Zeichen in der folgenden Zelle und schaut euch die Optionen mal an:"
    ]
   },
   {
@@ -1423,9 +1423,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Numpy Performance Test\n",
+    "## Numpy Performancetest\n",
     "\n",
-    "Zum Schluss wollen noch etwas Spaßiges machen und uns von Numpys unglaubliches Performance überzeugen. Dafür erstellen wir ein Numpy-Array mit einer Million (!) zufälligen Zahlen und berechnen die Summe darüber. Das selbe machen wir mit einer normalen Pythonliste und vergleichen die Ausführungszeit.\n",
+    "Zum Schluss wollen noch etwas Spaßiges machen und uns von Numpys unglaublicher Performance überzeugen. Dafür erstellen wir ein Numpy-Array mit einer Million (!) zufälligen Zahlen und berechnen die Summe darüber. Dasselbe machen wir mit einer normalen Pythonliste und vergleichen die Ausführungszeiten.\n",
     "> **Hinweis:** Mit dem _\"magischen\" Jupyterbefehl_ (oder auf Englisch: _cell magic_) `%%timeit` kannst du die Ausführungszeit für eine Jupyterzelle messen."
    ]
   },
@@ -1495,7 +1495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
