incorporate timos comments

--- a/103_Funktionen_und_Module.ipynb
+++ b/103_Funktionen_und_Module.ipynb
@@ -379,6 +379,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Location b (für Aufgabe 3)\n",
+    "\n",
     "GLOBAL_VAR = 12   # Hier definieren wir die globale Variable\n",
     "print('Hier wird GLOBAL_VAR ausserhalb der Funktion geprinted:')\n",
     "print(GLOBAL_VAR)\n",
@@ -387,11 +389,17 @@
     "def print_global_var():\n",
     "    print('Hier wird GLOBAL_VAR aus der Funktion heraus geprinted:')\n",
     "    print(GLOBAL_VAR)\n",
+    "\n",
+    "# Location e    \n",
     "    \n",
     "GLOBAL_VAR = 17   # Hier aendern wir den Wert der globalen Variable (um ein bisschen Verwirrung zu stifen)\n",
     "\n",
+    "# Location d\n",
+    "\n",
     "# Und jetz erst führen wir die Funktion aus\n",
-    "print_global_var()"
+    "print_global_var()\n",
+    "\n",
+    "# Location c"
    ]
   },
   {
@@ -402,13 +410,26 @@
     "\n",
     "**a)** Überlege dir, ob du genau erklären kannst, warum welcher Wert von `GLOBAL_VAR` wo geprinted wird.\n",
     "\n",
-    "**b)** Überlege dir, was passieren würde, wenn wir die Funktionsdefinition  `def print_global_var():` ganz nach oben in der Zelle verschieben würden.\n",
+    "**b)** Überlege dir, was passieren würde, wenn wir die Funktionsdefinition  `def print_global_var():` ganz nach oben in der Zelle verschieben würden (Location b).\n",
     "\n",
-    "**c)** Überlege dir, was passieren würde, wenn wir die Funktionsdefinition  `def print_global_var():` ganz nach unten in der Zelle verschieben würden.\n",
+    "**c)** Überlege dir, was passieren würde, wenn wir die Funktionsdefinition  `def print_global_var():` ganz nach unten in der Zelle verschieben würden (Location c).\n",
     "\n",
-    "**d)** Überlege dir, was passieren würde, wenn wir die Funktionsdefinition  `def print_global_var():` nach `GLOBAL_VAR = 17` verschieben würden.\n",
+    "**d)** Überlege dir, was passieren würde, wenn wir die Funktionsdefinition  `def print_global_var():` nach `GLOBAL_VAR = 17` verschieben würden (Location d).\n",
     "\n",
-    "**e)** Überlege dir, was passieren würde, wenn wir den Funktionsaufruf `print_global_var()` vor `GLOBAL_VAR = 17` verschieben würden."
+    "**e)** Überlege dir, was passieren würde, wenn wir den Funktionsaufruf `print_global_var()` vor `GLOBAL_VAR = 17` verschieben würden (Location e)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Wenn du deine Antworten zu den Teilaufgaben b) - e) weiter unten überprüfst, ist es wichtig, dass du JEDES MAL bevor du die Zelle ausführst folgende Schritte ausführst:**\n",
+    "- Klicke oben in der Menü-Leiste auf das Tab mit dem Namen \"Kernel\" (5. von links)\n",
+    "- Klicke dann im Sub-Menü auf \"Restart Kernel...\"\n",
+    "\n",
+    "Der Grund dafür ist, dass sich Jupyter Notebooks ein bisschen anders verhalten als normale Python Skripte. Wenn ein Python Skript einmal ausgeführt wird und dann an seinem Ende ankommt, wird es geschlossen und alle Variablen und deren Werte etc werden vergessen. Von einer Ausführung des Skripts zur nächsten wird nichts übertragen. Bei einer Jupyter Notebook Zelle ist das anders: Die Variablen und ihre Werte werden nicht vergessen wenn eine Zelle zu Ende gelaufen ist und dann anschließend nochmal gestartet wird. \n",
+    "\n",
+    "In dieser Aufgabe soll das Verhalten von globalen Variablen in einer \"normalen\" Python-Benutzung (also nicht im Jupyter Sonderfall) angeschaut werden, deswegen müssen wir Jupyter zwingen Dinge wieder zu vergessen. Und das machen wir durch den Neustart des Kernels."
    ]
   },
   {
@@ -417,7 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hier kannst du deine Antworten von oben überprüfen\n",
+    "# Hier kannst du deine Antworten von oben überprüfen. DENKE DRAN DEN KERNEL JEDES MAL NEU ZU STARTEN (siehe oben)\n",
     "\n",
     "# MODIFIZIERTER CODE HIER"
    ]
@@ -533,6 +554,10 @@
     "import module as m\n",
     "m.function_name()\n",
     "```\n",
+    "\n",
+    "> Hinweis: Manchmal enthalten zwei unterschiedliche Module Funktionen mit dem gleichen Namen, wie z.B. math.exp() und np.exp(). Damit Python weiß, welche Implementierung benutzt werden soll, müssen wir das Modul mit der Punktnotation spezifizieren. Dieses Konzept wird auch Namespaces genannt.\n",
+    "\n",
+    "> Achtung: Es hält dich übrigens niemand davon ab eine eigene Funktion zu schreiben, die z.B. `len()` heißt...Du \"überschreibst\" damit aber dann eine schon existierende Python Funktion! Pass also auf, wie du deine Funktionen oder Vaiablen benennst! Der Editor (oder Jupyter) können dir dabei helfen: Standard-Pythongefehle werden meistens anders gefärbt dargestellt. Wenn du also versehentlich eine Funktion oder Variable wie ein schon existierender Pythonbefehl benennst, wirst du das an seiner Farbe erkennen! Dann solltest du dir am besten einen anderen Namen überlegen!\n",
     "\n",
     "Wir können auch nur einzelne Funktionen eines Moduls importieren:\n",
     "\n",
