--- a/index.ipynb
+++ b/index.ipynb
@@ -21,17 +21,13 @@
     "- [Python installieren und ausführen](setup.ipynb)\n",
     "\n",
     "\n",
-    "- [101 - Grundlagen der Programmierung in Python](101%20-%20Grundlagen%20der%20Programmierung%20in%20Python.ipynb)\n",
-    "- [102 - Control Flow](102%20-%20Control%20Flow.ipynb)\n",
-    "- [103 - Funktionen und Module](103%20-%20Funktionen%20und%20Module.ipynb)\n",
+    "- [101 - Grundlagen der Programmierung in Python](101_Pythonvariablen.ipynb)\n",
+    "- [102 - Control Flow](102_controlflow.ipynb)\n",
+    "- [103 - Funktionen und Module](103_Funktionen_und_Module.ipynb)\n",
     "\n",
     "\n",
-    "- [201 - Numerik mit Numpy](201%20-%20Numerik%20mit%20Numpy.ipynb)\n",
+    "- [201 - Numerik mit Numpy](201_numerik_mit_numpy.ipynb)\n",
     "- [202 - Plots mit Matplotlib](202%20-%20Plots%20mit%20Matplotlib.ipynb)\n",
-    "- [203 - Fits mit Scipy](203%20-%20Fits%20mit%20Scipy.ipynb)\n",
-    "\n",
-    "\n",
-    "- [301 - Workflows mit Daten im PAP](301%20-%20Workflows%20mit%20Daten%20im%20PAP.ipynb)\n",
     "\n",
     "\n",
     "- [Challenges](challenges.ipynb)"
@@ -152,6 +148,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Was tun bei Fragen und Problemen?\n",
+    "\n",
+    "Es ist ganz normal, dass dein Code nicht von Anfang an funktioniert! Was also kannst du tun, wenn du eine Fehlermeldung bekommst und nicht weiterweißt?\n",
+    "\n",
+    "1. Gehe stets kleinschrittig vor! Baue nicht zu viele Änderungen auf einmal ein. Schreibe lieber nur ein bis zwei neue Zeilen und teste, ob sie das machen, was du dir vorgestellt hast. Wenn dabei etwas schiefgeht, ist es einfacher, den Fehler zu finden.\n",
+    "2. Schaue dir die Fehlermeldung genau an! Python ist ganz gut darin, verständliche Fehlermeldungen auszugeben. Manchmal liegt das Problem auch nicht direkt in der jeweiligen Zeile, die vor dir liegt, sondern in einem Code-Teil, den du aufgerufen hast. Auch das wird dir Python anzeigen.\n",
+    "3.Wenn du aus der Fehlermeldung nicht schlau wirst, kopiere die letzte Zeile der Fehlermeldung (die beginnt meistens mit `<Some>Error:`) und füge sie in die Suchmaschine deiner Wahl ein. Wahrscheinlich bist du nicht der oder die Erste mit dem Problem! Oft findest du relativ weit oben in den Suchergebnissen einen Link zu [Stackoverflow](https://stackoverflow.com/). Das ist ein Onlineforum, in dem Codeentwickler:innen Fragen stellen und beantworten können. Das ist eine gute Quelle für Hilfe!\n",
+    "4. Weitere nützliche Webseiten bei Fragen oder wenn du mehr über Python wissen willst:\n",
+    "   - Die offizielle [Python-Dokumentation](https://docs.python.org/3/library/index.html)\n",
+    "   - [Pythontutorial](https://docs.python.org/3/tutorial/index.html) auf der offiziellen Python-Website\n",
+    "   - [Realpython](https://realpython.com/) -- Timos Liebslings-Pythonreferenz! Dikatisch sehr gut aufbereitete Tutorials zu sämtlichen Themen im Pythonuniversum. Manche Tutorials sind allerdings kostenpflichtig (aber bei weitem nicht alle!)\n",
+    "5.) Frag deine beiden Kursleitenden! Und mach das *nicht* erst, wenn du das gesamte Web durchgesucht hast, trotzdem noch keine Lösung gefunden und schon fast am Verzweifeln bist!!! (Sondern schon früher! 😉)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -193,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
