--- a/103_Funktionen_und_Module.ipynb
+++ b/103_Funktionen_und_Module.ipynb
@@ -557,7 +557,7 @@
     "\n",
     "> Hinweis: Manchmal enthalten zwei unterschiedliche Module Funktionen mit dem gleichen Namen, wie z.B. math.exp() und np.exp(). Damit Python weiß, welche Implementierung benutzt werden soll, müssen wir das Modul mit der Punktnotation spezifizieren. Dieses Konzept wird auch Namespaces genannt.\n",
     "\n",
-    "> Achtung: Es hält dich übrigens niemand davon ab eine eigene Funktion zu schreiben, die z.B. `len()` heißt...Du \"überschreibst\" damit aber dann eine schon existierende Python Funktion! Pass also auf, wie du deine Funktionen oder Vaiablen benennst! Der Editor (oder Jupyter) können dir dabei helfen: Standard-Pythongefehle werden meistens anders gefärbt dargestellt. Wenn du also versehentlich eine Funktion oder Variable wie ein schon existierender Pythonbefehl benennst, wirst du das an seiner Farbe erkennen! Dann solltest du dir am besten einen anderen Namen überlegen!\n",
+    "> Achtung: Es hält dich übrigens niemand davon ab eine eigene Funktion zu schreiben, die z.B. `len()` heißt...Du \"überschreibst\" damit aber dann eine schon existierende Python Funktion! Pass also auf, wie du deine Funktionen oder Variablen benennst! Der Editor (oder Jupyter) können dir dabei helfen: Standard-Pythonbefehle werden meistens anders gefärbt dargestellt. Wenn du also versehentlich eine Funktion oder Variable wie ein schon existierender Pythonbefehl benennst, wirst du das an seiner Farbe erkennen! Dann solltest du dir am besten einen anderen Namen überlegen!\n",
     "\n",
     "Wir können auch nur einzelne Funktionen eines Moduls importieren:\n",
     "\n",
