--- a/202_Plots_mit_Matplotlib.ipynb
+++ b/202_Plots_mit_Matplotlib.ipynb
@@ -23,8 +23,9 @@
     "- [Einfaches Plotten](#Einfaches-Plotten)\n",
     "- [Plots gestalten](#Plots-gestalten)\n",
     "- [Mehrere Plots in einer Abbildung](#Mehrere-Plots-in-einer-Abbildung)\n",
+    "- [Aufgabe 1 - Plot Design](#Aufgabe-1---Plot-Design)\n",
     "- [Plots speichern](#Plots-speichern)\n",
-    "- [Aufgabe 1 - Temperaturen in Heidelberg visualisieren](#Aufgabe-1---Temperaturen-in-Heidelberg-visualisieren)"
+    "- [Aufgabe 2 - Temperaturen in Heidelberg visualisieren](#Aufgabe-2---Temperaturen-in-Heidelberg-visualisieren)"
    ]
   },
   {
@@ -70,7 +71,7 @@
     "> %matplotlib notebook\n",
     "> ```\n",
     ">\n",
-    "> Versucht's mal!"
+    "> Versucht's mal! (Je nach Browser/Python- und Jupyter-Version funktioniert das mal mehr, mal weniger gut. Sollte es bei dir funktionieren, kann es sehr nützlich sein, weil man dann z.B. in eine Grafik reinzoomen kann. Wenn nicht, kann man auch ganz ok ohne, also mit `%matplotlib inline` klar kommen.)"
    ]
   },
   {
@@ -95,7 +96,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(np.arange(100)**2)"
+    "x = np.arange(-10, 10, 0.1)\n",
+    "y = np.arange(-10, 10, 0.1)**2\n",
+    "plt.plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(y) # Beachte die x-Achse die du hier bekommst"
    ]
   },
   {
@@ -134,7 +146,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(np.arange(10), np.arange(10)**2)"
+    "x = np.arange(10)\n",
+    "y = np.arange(10)**2\n",
+    "plt.scatter(x, y)"
    ]
   },
   {
@@ -159,7 +173,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.errorbar(np.arange(10), np.arange(10)**2, yerr=np.arange(10))"
+    "x = np.arange(10)\n",
+    "y = np.arange(10)**2\n",
+    "err = np.arange(1, 6, 0.5)\n",
+    "\n",
+    "plt.errorbar(x, y, yerr=err)"
    ]
   },
   {
@@ -216,8 +234,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(np.random.random((64, 64)), interpolation='none')\n",
-    "plt.colorbar()"
+    "random_values = np.random.random((64, 64))\n",
+    "plt.imshow(random_values, interpolation='none')\n",
+    "plt.colorbar()    # die Farbe codiert den Wert der Einträge des zweidimensionalen arrays"
    ]
   },
   {
@@ -248,9 +267,9 @@
    "source": [
     "### Titel, und Achsen und Legende mit LaTeX\n",
     "\n",
-    "Strings in Matplotlib wie Titel und Achsenbeschriftungen können **LaTeX-Code** enthalten. Text zwischen `$`-Zeichen wird dabei wie gewohnt im _Math-Mode_ gesetzt.\n",
+    "Wir können Strings benutzen um die Plots mit Titel und Achsenbeschriftungen zu versehen.\n",
     "\n",
-    "> **Achtung:** Einige Zeichen wie `\\t` (`<TAB>`) oder `\\n` (`<RETURN>`) werden von Python als Steuerzeichen und daher nicht als LaTeX-Code interpretiert. Markiert Strings, die LaTeX-Code enthalten, daher mit dem Prefix `r` (für _raw_), sodass Steuerzeichen ignoriert werden."
+    "Üblicherweise beschriftet man eine Achse mit dem Namen der Variablen und (falls möglich) mit der physikalischen Einheit der Größe in eckigen Klammern (z.B. `[cm]`)."
    ]
   },
   {
@@ -260,17 +279,24 @@
    "outputs": [],
    "source": [
     "x = np.linspace(0, 2 * np.pi, 100)\n",
+    "y1 = np.sin(x)\n",
+    "y2 = np.cos(x)\n",
+    "\n",
     "# Plot mit Label für Legende\n",
-    "plt.plot(x, np.sin(x), label=r'$A \\times \\sin(\\phi)$')\n",
-    "plt.plot(x, np.cos(x), label=r'$A \\times \\cos(\\phi)$')\n",
+    "plt.plot(x, y1, label='sin(x)')\n",
+    "plt.plot(x, y2, label='cos(x)')\n",
+    "\n",
     "# Titel\n",
     "plt.title('Oszillation')\n",
+    "\n",
     "# Achsenlimits\n",
     "plt.xlim(0, 2 * np.pi)\n",
     "plt.ylim(-1, 1)\n",
+    "\n",
     "# Achsenbeschriftungen\n",
-    "plt.xlabel(r'Winkel $\\phi \\, [\\mathrm{rad}]$')\n",
-    "plt.ylabel(r'Auslenkung $d \\, [\\mathrm{cm}]$')\n",
+    "plt.xlabel('Winkel x [rad]')\n",
+    "plt.ylabel('Auslenkung y [cm]')\n",
+    "\n",
     "# Legende\n",
     "plt.legend(loc='lower left')"
    ]
@@ -279,9 +305,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mehrere Plots in einer Abbildung\n",
+    "### Aufgabe 1 - Plot Design\n",
     "\n",
-    "Wir können eine Abbildung in ein Gitter mit mehreren Achsen aufteilen. Funktionsaufrufe wie `plt.plot` plotten dann immer in die zuletzt erstellte Achse:"
+    "a) Erstelle einen Plot für y und z\n",
+    "\n",
+    "b) Beschrifte die y-Kurve mit \"y = f(x)\" und die z-Kurve mit \"z = g(x)\" in einer Legende\n",
+    "\n",
+    "c) Ändere die Farbe von y auf grün und von z auf rot.\n",
+    "\n",
+    "d) Verschiebe die Legende nach oben und in die Mitte des Plots\n",
+    "\n",
+    "e) Beschrifte die Achsen mit \"x\" und \"y/z\"\n",
+    "\n",
+    "f) Ändere den Bereich der y-Achse des Plots zu Werten zwischen -30 und 110\n",
+    "\n",
+    "g) Markiere jeden geplotteten Datenpunkt in den plots (Stichwort \"marker\") mit einem Punkt für y und einem Stern für z\n",
+    "\n",
+    "h) Ändere den linestyle für y zu gestrichelt"
    ]
   },
   {
@@ -290,46 +330,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Erstelle eine Abbildung mit Titel\n",
-    "fig = plt.figure()\n",
-    "fig.suptitle(\"Oszillation\")\n",
+    "x = np.linspace(-10, 10, 16)\n",
+    "y = 3 * x + 10\n",
+    "z = x**2\n",
     "\n",
-    "# Erstelle eine Achse in einem Gitter von 2 Zeilen und 1 Spalte\n",
-    "ax_upper = plt.subplot(211) # Abkürzung für die 1. Achse im Gitter\n",
-    "\n",
-    "# Funktionen plotten nun in diese Achse:\n",
-    "x = np.linspace(0, 2 * np.pi, 100)\n",
-    "plt.plot(x, np.sin(x), label=r'$\\sin(\\phi)$')\n",
-    "plt.xlim(0, 2 * np.pi)\n",
-    "plt.legend(loc='lower left')\n",
-    "\n",
-    "# Erstelle eine zweite Achse im gleichen Gitter, aber an 2. Position\n",
-    "ax_lower = plt.subplot(212, sharex=ax_upper, sharey=ax_upper) # Verwende die gleichen x- und y-Limits wie oben\n",
-    "\n",
-    "# Funktionen plotten nun in die zweite Achse:\n",
-    "plt.plot(x, np.cos(x), label=r'$\\cos(\\phi)$')\n",
-    "plt.xlabel(r'Winkel $\\phi \\, [\\mathrm{rad}]$')\n",
-    "plt.legend(loc='lower left')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **Hinweis:** Matplotlib arbeitet mit _Abbildungen_ und _Achsen_. Wenn wir solche nicht explizit erstellen, wie im Beispiel oben, werden sie beim Aufrufen von Funktionen wie `plt.plot` automatisch erstellt. Du kannst sie auch jederzeit abrufen:\n",
-    ">\n",
-    "> ```python\n",
-    "> fig = plt.gcf() # die aktuelle Abbildung\n",
-    "> ax = plt.gca() # die aktuelle Achse\n",
-    "> ```\n",
-    "> \n",
-    "> Wenn du genauer bestimmen willst, auf welche Achse du plotten möchtest, kannst du sie in Funktionsaufrufen auch angeben oder die Achse direkt verwenden:\n",
-    ">\n",
-    "> ```python\n",
-    "> # Explizit auf Achse `ax` plotten:\n",
-    "> plt.plot(x, y, axis=ax) # oder:\n",
-    "> ax.plot(x, y)\n",
-    "> ```"
+    "# DEIN CODE HIER"
    ]
   },
   {
@@ -347,6 +352,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x = np.linspace(-10, 10, 16)\n",
+    "y = 3 * x + 10\n",
+    "plt.plot(x, y)\n",
     "plt.savefig('plots/my_plot.png')"
    ]
   },
@@ -354,12 +362,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Hinweis:** Um einen Plot im **DIN A4-Format** zu speichern könnt ihr dessen Größe und Auflösung anpassen:\n",
+    "> **Hinweis:** Du kannst die Größe (in inches) und Auflösung (in dots-per-inch dpi) des gespeicherten Plots anpassen:\n",
     ">\n",
     "> ```python\n",
-    "> fig = plt.gcf()\n",
-    "> fig.set_size_inches(11.69, 8.27)\n",
-    "> plt.savefig(filename, dpi=150)\n",
+    "> plt.savefig(filename, dpi=150, filesize=(10, 5))\n",
     "> ```"
    ]
   },
@@ -367,16 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Hinweis:** Um Plots in **LaTeX Dokumente** einzubinden bietet sich das [PGF Vektorformat](https://en.wikipedia.org/wiki/PGF/TikZ) statt Pixelgrafiken wie PNG an. Damit übernimmt LaTeX das Zeichnen des Plots und setzt zudem die enthaltenen Texte selbst, sodass die Fonts und Stile des Dokuments auch im Plot verwendet werden.\n",
-    ">\n",
-    "> Eine Beispiel-Implementierung findet ihr im [TexFig](https://github.com/knly/texfig) Repository."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Aufgabe 1 - Temperaturen in Heidelberg visualisieren\n",
+    "### Aufgabe 2 - Temperaturen in Heidelberg visualisieren\n",
     "\n",
     "Wir visualisieren nun die Temperaturdaten mit denen wir schon numerisch gearbeitet haben. Lest die Daten zunächst erneut ein:"
    ]
@@ -396,9 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a) Plottet den Temperaturverlauf über den gesamten Zeitraum. Vergesst nicht Titel, Achsenbeschriftungen und Legende.\n",
-    "\n",
-    "**Hinweis:** Ihr könnt die Temperatureinheit als `^\\circ{}\\mathrm{C}` (rendert als $^\\circ{}\\mathrm{C}$) schreiben."
+    "a) Plottet den Temperaturverlauf über den gesamten Zeitraum. Vergesst nicht Titel, Achsenbeschriftungen und Legende."
    ]
   },
   {
@@ -415,12 +410,7 @@
    },
    "outputs": [],
    "source": [
-    "plt.plot(date, T, label='Messwerte')\n",
-    "plt.title('Temperaturverlauf in Heidelberg')\n",
-    "plt.xlim(np.min(date), np.max(date))\n",
-    "plt.xlabel(r'Zeitpunkt')\n",
-    "plt.ylabel(r'Temperatur $T \\, [^\\circ{}\\mathrm{C}]$')\n",
-    "plt.legend()"
+    "# DEIN CODE HIER"
    ]
   },
   {
@@ -457,8 +447,7 @@
    },
    "outputs": [],
    "source": [
-    "from nose.tools import assert_true\n",
-    "assert_true(plot_1a_fertig, \"Versuche dich an Aufgabe 1a, bis du mit deinem Plot zufrieden bist.\")\n",
+    "assert plot_1a_fertig, \"Versuche dich an Aufgabe 1a, bis du mit deinem Plot zufrieden bist.\"\n",
     "print(\"Sieht gut aus.\")"
    ]
   },
@@ -487,12 +476,7 @@
    },
    "outputs": [],
    "source": [
-    "plt.scatter(date % 1, T, marker='.', label='Messwerte')\n",
-    "plt.title('Jahres-Temperaturverlauf in Heidelberg')\n",
-    "plt.xlim(0, 1)\n",
-    "plt.xlabel(r'Zeitpunkt innerhalb des Jahres')\n",
-    "plt.ylabel(r'Temperatur $T \\, [^\\circ{}\\mathrm{C}]$')\n",
-    "plt.legend()"
+    "# DEIN CODE HIER"
    ]
   },
   {
@@ -529,8 +513,7 @@
    },
    "outputs": [],
    "source": [
-    "from nose.tools import assert_true\n",
-    "assert_true(plot_1b_fertig, \"Versuche dich an Aufgabe 1b, bis du mit deinem Plot zufrieden bist.\")\n",
+    "assert plot_1b_fertig, \"Versuche dich an Aufgabe 1b, bis du mit deinem Plot zufrieden bist.\"\n",
     "print(\"🖼 Wunderschön.\")"
    ]
   },
@@ -540,9 +523,9 @@
    "source": [
     "---\n",
     "\n",
-    "Nun kannst du Daten mit Numpy analysieren und mit Matplotlib plotten. Lerne in der nächsten Lektion wie du mit dem umfassenden wissenschaftlichen Paket _Scipy_ unter anderem Daten an Funktionen fitten kannst.\n",
+    "Nun kannst du Daten mit Numpy analysieren und mit Matplotlib plotten. \n",
     "\n",
-    "[Startseite](index.ipynb) | [**>> 203 - Fits mit Scipy**](203%20-%20Fits%20mit%20Scipy.ipynb)"
+    "[Startseite](index.ipynb) | "
    ]
   }
  ],
@@ -562,9 +545,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
