fix timos comments

--- a/202_Plots_mit_Matplotlib.ipynb
+++ b/202_Plots_mit_Matplotlib.ipynb
@@ -22,7 +22,6 @@
    "source": [
     "- [Einfaches Plotten](#Einfaches-Plotten)\n",
     "- [Plots gestalten](#Plots-gestalten)\n",
-    "- [Mehrere Plots in einer Abbildung](#Mehrere-Plots-in-einer-Abbildung)\n",
     "- [Aufgabe 1 - Plot Design](#Aufgabe-1---Plot-Design)\n",
     "- [Plots speichern](#Plots-speichern)\n",
     "- [Aufgabe 2 - Temperaturen in Heidelberg visualisieren](#Aufgabe-2---Temperaturen-in-Heidelberg-visualisieren)"
@@ -265,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Titel, und Achsen und Legende mit LaTeX\n",
+    "### Titel, und Achsen und Legende\n",
     "\n",
     "Wir können Strings benutzen um die Plots mit Titel und Achsenbeschriftungen zu versehen.\n",
     "\n",
