remove inline flag and explain plot

--- a/202_Plots_mit_Matplotlib.ipynb
+++ b/202_Plots_mit_Matplotlib.ipynb
@@ -13,7 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 202 - Plots mit Matplotlib"
+    "# 202 - Wissenschaftliche Grafiken mit Matplotlib\n",
+    "\n",
+    "**\"Wissenschaftliche Grafiken\" ist ein umständlicher und viel zu langer Begriff, deswegen hat sich das englische \"Plot\" dafür eingebürgert. Und in guter denglisch Manier hat man auch gleich noch das passende Verb \"plotten\" für das Erstellen der Grafiken gebastelt.**"
    ]
   },
   {
@@ -42,35 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Zeige Plots direkt im Jupyter Notebook an\n",
-    "%matplotlib inline\n",
-    "# Anschließend können wir das Modul importieren\n",
     "import matplotlib.pyplot as plt # Die Abkürzung `plt` ist Konvention\n",
     "# Numpy brauchen wir immer.\n",
     "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **Hinweis:** Matplotlib kann mit verschiedenen _Backends_ arbeiten um Plots zu speichern oder auch interaktiv anzuzeigen. Der Aufruf `%matplotlib inline` konfiguriert das Modul für die **statische Anzeige** von Plots im Jupyter Notebook und muss **vor** dem Import von PyPlot ausgeführt werden. Dabei können auch Anzeigeparameter gesetzt werden:\n",
-    ">\n",
-    "> ```python\n",
-    "> %matplotlib inline\n",
-    "> import matplotlib\n",
-    "> # Setzte Anzeigeparameter, z.B.:\n",
-    "> matplotlib.rcParams['figure.figsize'] = (10.0, 8.0)\n",
-    "> import matplotlib.pyplot as plt\n",
-    "> ```\n",
-    ">\n",
-    "> Folgender Aufruf konfiguriert das Jupyter Notebook alternativ für die Verwendung des **interaktiven Backends**:\n",
-    ">\n",
-    "> ```python\n",
-    "> %matplotlib notebook\n",
-    "> ```\n",
-    ">\n",
-    "> Versucht's mal! (Je nach Browser/Python- und Jupyter-Version funktioniert das mal mehr, mal weniger gut. Sollte es bei dir funktionieren, kann es sehr nützlich sein, weil man dann z.B. in eine Grafik reinzoomen kann. Wenn nicht, kann man auch ganz ok ohne, also mit `%matplotlib inline` klar kommen.)"
    ]
   },
   {
