fix links and typos, etc

--- a/103_Funktionen_und_Module.ipynb
+++ b/103_Funktionen_und_Module.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kurs 6.3 \"Vom Gehirn Lernen\" -- Python-Tutorial | [Startseite](index.ipynb)\n",
+    "Kurs 5.3 \"Vom Gehirn Lernen\" -- Python-Tutorial | [Startseite](index.ipynb)\n",
     "\n",
     "---"
    ]
@@ -24,7 +24,9 @@
     "- [Aufgabe 1 - Mehr Primzahlen](#Aufgabe-1---Mehr-Primzahlen)\n",
     "- [Aufgabe 2 - Fakultät](#Aufgabe-2---Fakultät)\n",
     "- [Funktionen aus Modulen importieren](#Funktionen-aus-Modulen-importieren)\n",
-    "- [Aufgabe 3 - Gaussian](#Aufgabe-3---Gaussian)"
+    "- [Aufgabe 3 - Globale Variablen](#Aufgabe-3---Globale-Variablen)\n",
+    "- [Aufgabe 4 - Noch mehr globale Variablen](#Aufgabe-4---Noch-mehr-globale-Variablen)\n",
+    "- [Aufgabe 5 - Gaussian](#Aufgabe-5---Gaussian)"
    ]
   },
   {
@@ -406,7 +408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aufgabe 3: Globale Variablen\n",
+    "### Aufgabe 3 - Globale Variablen\n",
     "\n",
     "**a)** Überlege dir, ob du genau erklären kannst, warum welcher Wert von `GLOBAL_VAR` wo geprinted wird.\n",
     "\n",
@@ -481,7 +483,7 @@
     "\n",
     "Bei der Verwendung von globalen Variablen ist Vorsicht geboten. Je länger der Code, desto schwieriger ist es den kompletten Überblick zu behalten, was welche Variable wo tut und wo sie wie verändert wird. \n",
     "\n",
-    "### Aufgabe 4: Noch mehr globale Variablen\n",
+    "### Aufgabe 4 - Noch mehr globale Variablen\n",
     "\n",
     "Versuche, ohne den untenstehenden Code laufen zu lassen, vorherzusagen was nacheinander geprinted wird.\n",
     "\n",
@@ -749,7 +751,7 @@
     "\n",
     "In den nächsten drei Lektionen lernen wir die Grundlagen jeweils eines Moduls, das in der wissenschaftlichen Programmierung mit Python allgegenwärtig ist und beginnen mit dem Numerik-Modul _Numpy_.\n",
     "\n",
-    "[Startseite](index.ipynb) | [**>> 201 - Numerik mit Numpy**](201%20-%20Numerik%20mit%20Numpy.ipynb)"
+    "[Startseite](index.ipynb) | [**>> 201 - Numerik mit Numpy**](201_Numerik_mit_Numpy.ipynb)"
    ]
   },
   {
