--- a/202_Plots_mit_Matplotlib.ipynb
+++ b/202_Plots_mit_Matplotlib.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python Einführungskurs für das Physikalische Anfängerpraktikum der Universität Heidelberg | [Startseite](index.ipynb)\n",
+    "Kurs 5.3 \"Vom Gehirn Lernen\" -- Python-Tutorial | [Startseite](index.ipynb)\n",
     "\n",
     "---"
    ]
@@ -500,8 +500,15 @@
     "\n",
     "Nun kannst du Daten mit Numpy analysieren und mit Matplotlib plotten. \n",
     "\n",
-    "[Startseite](index.ipynb) | "
+    "[Startseite](index.ipynb) | [**>> 301 - Abschlussaufgabe**](301_Gelateria.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
