--- a/101_Pythonvariablen.ipynb
+++ b/101_Pythonvariablen.ipynb
@@ -20,7 +20,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: passe alle links hier an!\n",
     "- [Aufgabe 1 - Werte und Typen](#Aufgabe-1---Werte-und-Typen)\n",
     "- [Strings](#Strings)\n",
     "- [Aufgabe 2 - Strings und Dokumentation](#Aufgabe-2---Strings-und-Dokumentation)\n",
@@ -1124,13 +1123,13 @@
     "Es gibt zwar bestimmt schon hunderte Cheatcheats fertig im Internet zum Herunterladen. \n",
     "Aber du lernst viel mehr dabei, wenn du dir selber eins erstellst! Und du kannst es dann in den nächsten Lektionen noch weiter ausbauen! :)\n",
     "\n",
-    "[Startseite](index.ipynb) | [**>> 102 - Control Flow**](102_controlflow.ipynb)"
+    "[Startseite](index.ipynb) | [**>> 102 - Control Flow**](102_Controlflow.ipynb)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1144,7 +1143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
