--- a/102_Controlflow.ipynb
+++ b/102_Controlflow.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kurs 6.3 \"Vom Gehirn Lernen\" -- Python-Tutorial  | [Startseite](index.ipynb)\n",
+    "Kurs 5.3 \"Vom Gehirn Lernen\" -- Python-Tutorial  | [Startseite](index.ipynb)\n",
     "\n",
     "---"
    ]
@@ -25,7 +25,8 @@
     "- [`for`-Schleifen](#for-Schleifen)\n",
     "- [Aufgabe 2 - Primzahlen](#Aufgabe-2---Primzahlen)\n",
     "- [`while`-Schleifen](#while-Schleifen)\n",
-    "- [Aufgabe 3 - Fibonacci](#Aufgabe-3---Fibonacci)"
+    "- [Aufgabe 3 - Fibonacci](#Aufgabe-3---Fibonacci)\n",
+    "- [Aufgabe 4-7 - Flowchart](#Aufgabe-4---Flowchart)"
    ]
   },
   {
@@ -813,7 +814,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -827,7 +828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
