--- a/201_Numerik_mit_Numpy.ipynb
+++ b/201_Numerik_mit_Numpy.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "- [Numpy Arrays erstellen](#Numpy-Arrays-erstellen)\n",
     "- [Aufgabe 1 - Numpy Arrays](#Aufgabe-1---Numpy-Arrays)\n",
-    "- [Aufgabe 2 - Slicing](#Aufgabe-2---Slicing)\n",
+    "- [Aufgabe 2 - Masken & Slicing](#Aufgabe-2---Masken-&-Slicing)\n",
     "- [Funktionen auf Arrays anwenden](#Funktionen-auf-Arrays-anwenden)\n",
     "- [Daten einlesen und speichern](#Daten-einlesen-und-speichern)\n",
     "- [Aufgabe 3 - Temperaturen in Heidelberg](#Aufgabe-3---Temperaturen-in-Heidelberg)"
@@ -1475,13 +1475,13 @@
     "\n",
     "Du kannst jetzt Daten einlesen und mit Numpy analysieren. Lerne in der nächsten Lektion, wie du mit _Matplotlib_ wissenschaftlich plotten kannst.\n",
     "\n",
-    "[Startseite](index.ipynb) | [**>> 202 - Plots mit Matplotlib**](202%20-%20Plots%20mit%20Matplotlib.ipynb)"
+    "[Startseite](index.ipynb) | [**>> 202 - Plots mit Matplotlib**](202_Plots_mit_Matplotlib.ipynb)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1495,7 +1495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
