--- a/301_Gelateria.ipynb
+++ b/301_Gelateria.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e824bdb0-15a3-4321-ab3e-cf5e6b01c777",
+   "metadata": {},
+   "source": [
+    "Kurs 5.3 \"Vom Gehirn Lernen\" -- Python-Tutorial  | [Startseite](index.ipynb)\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8c823c24-2ede-4890-ad16-99cc288dc3c4",
    "metadata": {},
    "source": [
@@ -227,7 +237,7 @@
    "source": [
     "# DEIN FEEDBACK HIER\n",
     "\n",
-    "# GESAMTNOTE:\n",
+    "# GESAMTBEWERTUNG:\n",
     "\n",
     "# drei erklärende Halbsätze, warum die die Aufgabe leicht/schwer gefallen ist:"
    ]
@@ -235,7 +245,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -249,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
