--- a/index.ipynb
+++ b/index.ipynb
@@ -15,22 +15,20 @@
     "\n",
     "## Inhalt\n",
     "\n",
-    "TODO: Anpassen!\n",
-    "\n",
-    "- [Einleitung und Inhalt](index.ipynb)\n",
+    "- [Einleitung und Inhalthaltsverzeichsnis (hier)](index.ipynb)\n",
     "- [Python installieren und ausführen](setup.ipynb)\n",
     "\n",
     "\n",
     "- [101 - Grundlagen der Programmierung in Python](101_Pythonvariablen.ipynb)\n",
-    "- [102 - Control Flow](102_controlflow.ipynb)\n",
+    "- [102 - Control Flow](102_Controlflow.ipynb)\n",
     "- [103 - Funktionen und Module](103_Funktionen_und_Module.ipynb)\n",
     "\n",
     "\n",
-    "- [201 - Numerik mit Numpy](201_numerik_mit_numpy.ipynb)\n",
-    "- [202 - Plots mit Matplotlib](202%20-%20Plots%20mit%20Matplotlib.ipynb)\n",
+    "- [201 - Numerik mit Numpy](201_Numerik_mit_Numpy.ipynb)\n",
+    "- [202 - Plots mit Matplotlib](202_Plots_mit_Matplotlib.ipynb)\n",
     "\n",
     "\n",
-    "- [Challenges](challenges.ipynb)"
+    "- [301 - Abschlussaufgabe](301_Gelateria.ipynb)"
    ]
   },
   {
@@ -193,7 +191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -207,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
