--- a/setup.ipynb
+++ b/setup.ipynb
@@ -21,7 +21,7 @@
     "In diesem Kurs wirst du den Umgang mit Notebooks noch kennenlernen, schließlich sind diese Kursmaterialien selbst Jupyter Notebooks!\n",
     "\n",
     "Das Jupyter Notebook muss dabei immer auf einen _Kernel_ zurückgreifen können, also eine Python Installation auf dem System.\n",
-    "Standardmäßig könnt diesen Kurs einfach auf [lab.ebrains.eu](https://lab.ebrains.eu/) ausführen, wo Python, ein Jupyterserver und alle benötigten Packages schon installiert sind. \n",
+    "Standardmäßig könnt ihr diesen Kurs einfach auf [lab.ebrains.eu](https://lab.ebrains.eu/) ausführen, wo Python, ein Jupyterserver und alle benötigten Packages schon installiert sind. \n",
     "\n",
     "Wenn du willst (das ist aber freiwillig!), kannst du Python - falls du das nicht schon gemacht hast - auf deinem eigenen PC installieren. Im Folgenden erklären wir dir, wie das geht."
    ]
@@ -116,7 +116,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -130,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
