--- a/103_Funktionen_und_Module.ipynb
+++ b/103_Funktionen_und_Module.ipynb
@@ -79,9 +79,10 @@
     "    summe = a + b\n",
     "    return summe\n",
     "\n",
-    "print(add(1,3))\n",
-    "print(add(1.,3.2))\n",
-    "print(add(4,3.))"
+    "\n",
+    "print(add(1, 3))\n",
+    "print(add(1.0, 3.2))\n",
+    "print(add(4, 3.0))"
    ]
   },
   {
@@ -100,9 +101,10 @@
     "def add(a, b):\n",
     "    return a + b\n",
     "\n",
-    "print(add(1,3))\n",
-    "print(add(1.,3.2))\n",
-    "print(add(4,3.))"
+    "\n",
+    "print(add(1, 3))\n",
+    "print(add(1.0, 3.2))\n",
+    "print(add(4, 3.0))"
    ]
   },
   {
@@ -121,6 +123,7 @@
     "def double_and_halve(value):\n",
     "    return value * 2, value / 2\n",
     "\n",
+    "\n",
     "print(double_and_halve(5))"
    ]
   },
@@ -137,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d, h = double_and_halve(5.)\n",
+    "d, h = double_and_halve(5.0)\n",
     "print(d)\n",
     "print(h)"
    ]
@@ -157,14 +160,17 @@
    "source": [
     "def do_a():\n",
     "    print(\"doing A\")\n",
-    "    \n",
+    "\n",
+    "\n",
     "def do_b():\n",
     "    print(\"doing B\")\n",
-    "    \n",
+    "\n",
+    "\n",
     "def do_a_and_b():\n",
     "    do_a()\n",
     "    do_b()\n",
-    "    \n",
+    "\n",
+    "\n",
     "do_a_and_b()"
    ]
   },
@@ -183,6 +189,8 @@
    "source": [
     "def say_hello(to_name=\"World\"):\n",
     "    print(\"Hello {}!\".format(to_name))\n",
+    "\n",
+    "\n",
     "say_hello()\n",
     "say_hello(\"Alice\")"
    ]
@@ -205,6 +213,8 @@
     "        print(\"Hello {}!\".format(name))\n",
     "    else:\n",
     "        print(\"Hello {}! My name is {}.\".format(to_name, my_name))\n",
+    "\n",
+    "\n",
     "say_hello(\"Alice\", \"Bob\")\n",
     "say_hello(my_name=\"Bob\", to_name=\"Alice\")"
    ]
@@ -236,7 +246,7 @@
    "source": [
     "def is_prime(n):\n",
     "    # DEINE LÖSUNG HIER\n",
-    "    pass  # `pass` ist ein Platzhalter und sagt Python, dass es einfach nix machen soll. Entferne es, wenn du eine Lösung hast\n"
+    "    pass  # `pass` ist ein Platzhalter und sagt Python, dass es einfach nix machen soll. Entferne es, wenn du eine Lösung hast"
    ]
   },
   {
@@ -257,10 +267,16 @@
     "try:\n",
     "    is_prime\n",
     "except NameError:\n",
-    "    raise NameError(\"Es gibt keine Funktion mit dem Namen 'is_prime'. Stelle sicher, dass deine Funktion so benannt ist.\")\n",
-    "    \n",
-    "assert is_prime(47), \"Die Zahl 47 sollte eine Primzahl sein. Prüfe den Code deiner Funktion.\"\n",
-    "assert not is_prime(48), \"Die Zahl 48 sollte _keine_ Primzahl sein. Prüfe den Code deiner Funktion.\"\n",
+    "    raise NameError(\n",
+    "        \"Es gibt keine Funktion mit dem Namen 'is_prime'. Stelle sicher, dass deine Funktion so benannt ist.\"\n",
+    "    )\n",
+    "\n",
+    "assert is_prime(\n",
+    "    47\n",
+    "), \"Die Zahl 47 sollte eine Primzahl sein. Prüfe den Code deiner Funktion.\"\n",
+    "assert not is_prime(\n",
+    "    48\n",
+    "), \"Die Zahl 48 sollte _keine_ Primzahl sein. Prüfe den Code deiner Funktion.\"\n",
     "print(\"Klappt.\")"
    ]
   },
@@ -312,8 +328,10 @@
     "try:\n",
     "    factorial\n",
     "except NameError:\n",
-    "    raise NameError(\"Es gibt keine Funktion mit dem Namen 'factorial'. Stelle sicher, dass deine Funktion so benannt ist.\")\n",
-    "    \n",
+    "    raise NameError(\n",
+    "        \"Es gibt keine Funktion mit dem Namen 'factorial'. Stelle sicher, dass deine Funktion so benannt ist.\"\n",
+    "    )\n",
+    "\n",
     "assert factorial(1) == 1, \"1! sollte 1 ergeben. Prüfe den Code deiner Funktion.\"\n",
     "assert factorial(2) == 2, \"2! sollte 2 ergeben. Prüfe den Code deiner Funktion.\"\n",
     "assert factorial(5) == 120, \"5! sollte 120 ergeben. Prüfe den Code deiner Funktion.\"\n",
@@ -336,13 +354,16 @@
    "outputs": [],
    "source": [
     "def do_something():\n",
-    "    local_var = 17 # Diese Variable ist innerhalb der Funktion definiert...\n",
-    "    print('Innerhalb der Funktion ist local_var bekannt und ihr Wert kann hier geprinted werden:')\n",
+    "    local_var = 17  # Diese Variable ist innerhalb der Funktion definiert...\n",
+    "    print(\n",
+    "        \"Innerhalb der Funktion ist local_var bekannt und ihr Wert kann hier geprinted werden:\"\n",
+    "    )\n",
     "    print(local_var)\n",
-    "    \n",
-    "do_something()    \n",
     "\n",
-    "print('...aber ausserhalb der Funktion nicht')\n",
+    "\n",
+    "do_something()\n",
+    "\n",
+    "print(\"...aber ausserhalb der Funktion nicht\")\n",
     "print(local_var)"
    ]
   },
@@ -359,11 +380,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PI = 3.14 # Diese Variable ist global definiert...\n",
+    "PI = 3.14  # Diese Variable ist global definiert...\n",
     "# ...und kann überall, also auch innerhalb von verschiedenen Funktionen verwendet werden:\n",
+    "\n",
     "\n",
     "def degrees_to_radians(degrees):\n",
     "    return degrees / 180 * PI\n",
+    "\n",
     "\n",
     "degrees_to_radians(90)"
    ]
@@ -383,18 +406,20 @@
    "source": [
     "# Location b (für Aufgabe 3)\n",
     "\n",
-    "GLOBAL_VAR = 12   # Hier definieren wir die globale Variable\n",
-    "print('Hier wird GLOBAL_VAR ausserhalb der Funktion geprinted:')\n",
+    "GLOBAL_VAR = 12  # Hier definieren wir die globale Variable\n",
+    "print(\"Hier wird GLOBAL_VAR ausserhalb der Funktion geprinted:\")\n",
     "print(GLOBAL_VAR)\n",
+    "\n",
     "\n",
     "# Hier definieren wir eine Funktion die die globale Variable benutzen wird sobald die Funktion ausgeführt wird\n",
     "def print_global_var():\n",
-    "    print('Hier wird GLOBAL_VAR aus der Funktion heraus geprinted:')\n",
+    "    print(\"Hier wird GLOBAL_VAR aus der Funktion heraus geprinted:\")\n",
     "    print(GLOBAL_VAR)\n",
     "\n",
-    "# Location e    \n",
-    "    \n",
-    "GLOBAL_VAR = 17   # Hier aendern wir den Wert der globalen Variable (um ein bisschen Verwirrung zu stifen)\n",
+    "\n",
+    "# Location e\n",
+    "\n",
+    "GLOBAL_VAR = 17  # Hier aendern wir den Wert der globalen Variable (um ein bisschen Verwirrung zu stifen)\n",
     "\n",
     "# Location d\n",
     "\n",
@@ -466,11 +491,15 @@
    "outputs": [],
    "source": [
     "a = 1\n",
+    "\n",
+    "\n",
     "def show_var():\n",
     "    a = 2\n",
     "    print(a)\n",
-    "show_var() # Hier wird die lokale Variable verwendet...\n",
-    "print(a) # ... und hier die Globale."
+    "\n",
+    "\n",
+    "show_var()  # Hier wird die lokale Variable verwendet...\n",
+    "print(a)  # ... und hier die Globale."
    ]
   },
   {
@@ -494,24 +523,24 @@
     "def function1():\n",
     "    b = 17\n",
     "    print('a = {}'.format(a))\n",
-    "    print('b = {}'.format(a))\n",
+    "    print('b = {}'.format(b))\n",
     "    \n",
     "def function2():\n",
     "    a = 42\n",
     "    print('a = {}'.format(a))\n",
-    "    print('b = {}'.format(a))\n",
+    "    print('b = {}'.format(b))\n",
     "\n",
     "function2()    \n",
     "    \n",
     "print('a = {}'.format(a))\n",
-    "print('b = {}'.format(a))\n",
+    "print('b = {}'.format(b))\n",
     "\n",
     "a = 13\n",
     "\n",
     "function1()\n",
     "\n",
     "print('a = {}'.format(a))\n",
-    "print('b = {}'.format(a))\n",
+    "print('b = {}'.format(b))\n",
     "\n",
     "b = 13\n",
     "a = 17\n",
@@ -520,6 +549,13 @@
     "function2()    \n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -583,6 +619,7 @@
    "outputs": [],
    "source": [
     "import math\n",
+    "\n",
     "math.factorial(5)"
    ]
   },
@@ -599,7 +636,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math # Importiere das Modul, indem du diese Zelle ausführst"
+    "import math  # Importiere das Modul, indem du diese Zelle ausführst"
    ]
   },
   {
@@ -608,7 +645,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#math.<TAB> # Entferne das '#'-Symbol und drücke die <TAB>-Taste nach dem Punkt"
+    "# math.<TAB> # Entferne das '#'-Symbol und drücke die <TAB>-Taste nach dem Punkt"
    ]
   },
   {
@@ -634,10 +671,12 @@
     "from math import cos, sin\n",
     "from math import pi as PI\n",
     "\n",
+    "\n",
     "def func(r, phi, theta):\n",
     "    return r * cos(phi) * sin(theta)\n",
     "\n",
-    "func(1, 0, PI/2)"
+    "\n",
+    "func(1, 0, PI / 2)"
    ]
   },
   {
@@ -665,7 +704,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "li = [1,2,7,3,1,3]\n",
+    "\n",
+    "li = [1, 2, 7, 3, 1, 3]\n",
     "np.mean(li), np.std(li)"
    ]
   },
@@ -706,6 +746,7 @@
    "source": [
     "from numpy import exp, sqrt\n",
     "\n",
+    "\n",
     "def gaussian(x, mu, sigma, A):\n",
     "    # DEINE LÖSUNG HIER\n",
     "    pass  # `pass` ist ein Platzhalter und sagt Python, dass es einfach nix machen soll. Entferne es, wenn du eine Lösung hast"
@@ -729,15 +770,23 @@
     "try:\n",
     "    exp\n",
     "except NameError:\n",
-    "    raise NameError(\"Es gibt keine Funktion mit dem Namen 'exp'. Hast du die Funktion mit der `from module import function_name` Syntax importiert?\")\n",
-    "    \n",
+    "    raise NameError(\n",
+    "        \"Es gibt keine Funktion mit dem Namen 'exp'. Hast du die Funktion mit der `from module import function_name` Syntax importiert?\"\n",
+    "    )\n",
+    "\n",
     "try:\n",
     "    gaussian\n",
     "except NameError:\n",
-    "    raise NameError(\"Es gibt keine Funktion mit dem Namen 'gaussian'. Stelle sicher, dass deine Funktion so benannt ist.\")\n",
+    "    raise NameError(\n",
+    "        \"Es gibt keine Funktion mit dem Namen 'gaussian'. Stelle sicher, dass deine Funktion so benannt ist.\"\n",
+    "    )\n",
     "\n",
-    "assert gaussian(x=0, mu=0, sigma=1, A=1) == 1, \"gaussian(x=0, mu=0, sigma=1, A=1) sollte 1 ergeben. Prüfe den Code deiner Funktion.\"\n",
-    "assert abs(gaussian(x=0, mu=1, sigma=2, A=3) - 3.4) < 0.1, \"gaussian(x=0, mu=1, sigma=2, A=3) sollte ca 3.4 ergeben. Prüfe den Code deiner Funktion.\"\n",
+    "assert (\n",
+    "    gaussian(x=0, mu=0, sigma=1, A=1) == 1\n",
+    "), \"gaussian(x=0, mu=0, sigma=1, A=1) sollte 1 ergeben. Prüfe den Code deiner Funktion.\"\n",
+    "assert (\n",
+    "    abs(gaussian(x=0, mu=1, sigma=2, A=3) - 3.4) < 0.1\n",
+    "), \"gaussian(x=0, mu=1, sigma=2, A=3) sollte ca 3.4 ergeben. Prüfe den Code deiner Funktion.\"\n",
     "print(\"👍 Stimmt so.\")"
    ]
   },
@@ -764,7 +813,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -778,7 +827,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
