--- a/202_Plots_mit_Matplotlib.ipynb
+++ b/202_Plots_mit_Matplotlib.ipynb
@@ -44,7 +44,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt # Die Abkürzung `plt` ist Konvention\n",
+    "% matplotlib inline  # das ist einer sogenannter \"cell magic command\",\n",
+    "# also ein -- naja -- \"magischer\" Jupyter-Befehl, der dem Jupyter-Notebook mitteilt,\n",
+    "# dass die Plots direkt unter den Zellen angezeigt werden sollen.\n",
+    "# kleiner Hinweis: eigentlich ist dieser Befehl heutzutage obsolet, aber auf\n",
+    "# EBRAINS wird er scheinbar doch noch benötigt...\n",
+    "\n",
+    "import matplotlib.pyplot as plt  # Die Abkürzung `plt` ist Konvention\n",
+    "\n",
     "# Numpy brauchen wir immer.\n",
     "import numpy as np"
    ]
@@ -72,7 +79,7 @@
    "outputs": [],
    "source": [
     "x = np.arange(-10, 10, 0.1)\n",
-    "y = np.arange(-10, 10, 0.1)**2\n",
+    "y = np.arange(-10, 10, 0.1) ** 2\n",
     "plt.plot(x, y)"
    ]
   },
@@ -82,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(y) # Beachte die x-Achse die du hier bekommst"
+    "plt.plot(y)  # Beachte die x-Achse die du hier bekommst"
    ]
   },
   {
@@ -98,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plt.plot?"
+    "# plt.plot?"
    ]
   },
   {
@@ -122,7 +129,7 @@
    "outputs": [],
    "source": [
     "x = np.arange(10)\n",
-    "y = np.arange(10)**2\n",
+    "y = np.arange(10) ** 2\n",
     "plt.scatter(x, y)"
    ]
   },
@@ -132,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plt.scatter?"
+    "# plt.scatter?"
    ]
   },
   {
@@ -149,7 +156,7 @@
    "outputs": [],
    "source": [
     "x = np.arange(10)\n",
-    "y = np.arange(10)**2\n",
+    "y = np.arange(10) ** 2\n",
     "err = np.arange(1, 6, 0.5)\n",
     "\n",
     "plt.errorbar(x, y, yerr=err)"
@@ -161,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plt.errorbar?"
+    "# plt.errorbar?"
    ]
   },
   {
@@ -186,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plt.hist?"
+    "# plt.hist?"
    ]
   },
   {
@@ -210,8 +217,8 @@
    "outputs": [],
    "source": [
     "random_values = np.random.random((64, 64))\n",
-    "plt.imshow(random_values, interpolation='none')\n",
-    "plt.colorbar()    # die Farbe codiert den Wert der Einträge des zweidimensionalen arrays"
+    "plt.imshow(random_values, interpolation=\"none\")\n",
+    "plt.colorbar()  # die Farbe codiert den Wert der Einträge des zweidimensionalen arrays"
    ]
   },
   {
@@ -220,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plt.imshow?"
+    "# plt.imshow?"
    ]
   },
   {
@@ -258,22 +265,22 @@
     "y2 = np.cos(x)\n",
     "\n",
     "# Plot mit Label für Legende\n",
-    "plt.plot(x, y1, label='sin(x)')\n",
-    "plt.plot(x, y2, label='cos(x)')\n",
+    "plt.plot(x, y1, label=\"sin(x)\")\n",
+    "plt.plot(x, y2, label=\"cos(x)\")\n",
     "\n",
     "# Titel\n",
-    "plt.title('Oszillation')\n",
+    "plt.title(\"Oszillation\")\n",
     "\n",
     "# Achsenlimits\n",
     "plt.xlim(0, 2 * np.pi)\n",
     "plt.ylim(-1, 1)\n",
     "\n",
     "# Achsenbeschriftungen\n",
-    "plt.xlabel('Winkel x [rad]')\n",
-    "plt.ylabel('Auslenkung y [cm]')\n",
+    "plt.xlabel(\"Winkel x [rad]\")\n",
+    "plt.ylabel(\"Auslenkung y [cm]\")\n",
     "\n",
     "# Legende\n",
-    "plt.legend(loc='lower left')"
+    "plt.legend(loc=\"lower left\")"
    ]
   },
   {
@@ -330,7 +337,7 @@
     "x = np.linspace(-10, 10, 16)\n",
     "y = 3 * x + 10\n",
     "plt.plot(x, y)\n",
-    "plt.savefig('plots/my_plot.png')"
+    "plt.savefig(\"plots/my_plot.png\")"
    ]
   },
   {
@@ -360,8 +367,8 @@
    "outputs": [],
    "source": [
     "# Zelle ausführen, um Daten einzulesen\n",
-    "data = np.loadtxt('data/temperatures.txt')\n",
-    "date, T = data[np.abs(data[:,1]) != 99,:].transpose()"
+    "data = np.loadtxt(\"data/temperatures.txt\")\n",
+    "date, T = data[np.abs(data[:, 1]) != 99, :].transpose()"
    ]
   },
   {
@@ -422,7 +429,9 @@
    },
    "outputs": [],
    "source": [
-    "assert plot_1a_fertig, \"Versuche dich an Aufgabe 1a, bis du mit deinem Plot zufrieden bist.\"\n",
+    "assert (\n",
+    "    plot_1a_fertig\n",
+    "), \"Versuche dich an Aufgabe 1a, bis du mit deinem Plot zufrieden bist.\"\n",
     "print(\"Sieht gut aus.\")"
    ]
   },
@@ -488,7 +497,9 @@
    },
    "outputs": [],
    "source": [
-    "assert plot_1b_fertig, \"Versuche dich an Aufgabe 1b, bis du mit deinem Plot zufrieden bist.\"\n",
+    "assert (\n",
+    "    plot_1b_fertig\n",
+    "), \"Versuche dich an Aufgabe 1b, bis du mit deinem Plot zufrieden bist.\"\n",
     "print(\"🖼 Wunderschön.\")"
    ]
   },
@@ -513,7 +524,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -527,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
