--- a/301_Gelateria.ipynb
+++ b/301_Gelateria.ipynb
@@ -37,6 +37,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
+    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -245,7 +247,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -259,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
