--- a/301_Gelateria_Musterloesung.ipynb
+++ b/301_Gelateria_Musterloesung.ipynb
@@ -27,7 +27,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -290,7 +292,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -304,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
